Lucas-Goulart - Adicionadas instruções para criação do banco

--- a/Config.ini
+++ b/Config.ini
@@ -1,5 +1,5 @@
 [DATABASE]
-Database='C:\Users\lucas\Documents\Embarcadero\Studio\23.0\PostoABC\Database\PROJETOABC.FDB'
+Database=C:\PostoABC\PostoABC.fdb
 Server=localhost
 Port=3050
 UserName=SYSDBA
